--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
 
 <body>
  <h3>The Psychic Game<span class="badge badge-secondary"></span></h3>
- <div>
- <p id="computer-choice">Guess what letter I'm thinking of: </p>
- <p id="win-text"> Wins:</p>
- <p id="loose-text"> Losses:</p>
- <p id="user-choice"> Your Guesses so far:</p>
-</div>
+
+
+<div id="directions-text">Guess what letter I'm thinking of</div>
+<div id="win-text"></div>
+<div id="losse-text"></div>
+<p id="guess-left-text"></p>
+<p id="guesses-so-far"></p> 
+<p id="computer-choice" style="color:white;"></p>
+
 
 
 <!-- Javascript Reference -->
-    <script type="text/Javascript" src="assets/javascript/game.js"></script>
+<script type="text/Javascript" src="assets/javascript/game.js"></script> 
     
 </body>
 </html>
